--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,6 +3,6 @@
 
 <body>
     <%- include('includes/navigation.ejs') %>
-    <h1>This is Page!</h1>
+    <h1>CartPage</h1>
 
-<%- include('includes/end.ejs') %></body>
+<%- include('includes/end.ejs') %>
