--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -13,6 +13,22 @@
                 <input type="text" name="title" id="title">
             </div>
 
+            <div class="form-control">
+                <label for="imageURL">ImageURL</label>
+                <input type="text" name="imageURL" id="imageURL">
+            </div>
+            
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price">
+            </div>
+
+            <div class="form-control">
+                <label for="description">Description</label>
+                <!-- <input type="number" name="description" id="description"> -->
+                <textarea name="description" id="description" rows="5"></textarea>
+            </div>
+
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
