--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -14,8 +14,8 @@
             </div>
 
             <div class="form-control">
-                <label for="imageURL">ImageURL</label>
-                <input type="text" name="imageURL" id="imageURL">
+                <label for="imageUrl">ImageUrl</label>
+                <input type="text" name="imageUrl" id="imageUrl">
             </div>
             
             <div class="form-control">
